--- a/client/pyproject.toml
+++ b/client/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "librosa>=0.10.2.post1",
+    "numpy>=2.0.2",
     "pyaudio>=0.2.14",
 ]
