--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "numpy>=2.2.1",
     "pywhispercpp>=1.3.0",
+    "silero-vad>=5.1.2",
+    "soundfile>=0.12.1",
 ]
