--- a/transcribe/CMakeLists.txt
+++ b/transcribe/CMakeLists.txt
@@ -8,7 +8,7 @@ set(PYBIND11_FINDPYTHON ON)
 add_subdirectory(extern/pybind11)
 add_subdirectory(extern/whisper.cpp)
 
-pybind11_add_module(_core MODULE src/main.cpp src/library.cpp src/grammar-parser.cpp)
+pybind11_add_module(_core MODULE src/bindings.cpp src/library.cpp src/grammar-parser.cpp)
 
 target_link_libraries(_core PRIVATE whisper)
 
