--- a/transcribe/CMakeLists.txt
+++ b/transcribe/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.30)
 option(SKBUILD_PROJECT_NAME "A thing" "transcribe")
 project(${SKBUILD_PROJECT_NAME} LANGUAGES CXX)
 
-option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
+# Some systems fail to correctly load the dynamic libraries in a venv
+# Always using static libraries is reasonable anyways, so just force that here
+SET(BUILD_SHARED_LIBS OFF CACHE BOOL "Build using shared libraries")
 
 set(PYBIND11_FINDPYTHON ON)
 add_subdirectory(extern/pybind11)
