--- a/whisppy/CMakeLists.txt
+++ b/whisppy/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.30)
-option(SKBUILD_PROJECT_NAME "A thing" "transcribe")
+option(SKBUILD_PROJECT_NAME "whisper.cpp bindings for hans" "whisppy")
 project(${SKBUILD_PROJECT_NAME} LANGUAGES CXX)
 
 # Some systems fail to correctly load the dynamic libraries in a venv
@@ -11,10 +11,10 @@ set(PYBIND11_FINDPYTHON ON)
 add_subdirectory(extern/pybind11)
 add_subdirectory(extern/whisper.cpp)
 
-pybind11_add_module(_core MODULE src/bindings.cpp src/library.cpp src/grammar-parser.cpp)
+pybind11_add_module(_whisppy MODULE src/bindings.cpp src/library.cpp src/grammar-parser.cpp)
 
-target_link_libraries(_core PRIVATE whisper)
+target_link_libraries(_whisppy PRIVATE whisper)
 
 install(
-    TARGETS _core DESTINATION ${SKBUILD_PROJECT_NAME}
+    TARGETS _whisppy DESTINATION ${SKBUILD_PROJECT_NAME}
 )
