Use ruff to format and lint code
Pull Request: https://github.com/sjohnson31/hans/pull/11

--- a/packages/whisppy/pyproject.toml
+++ b/packages/whisppy/pyproject.toml
@@ -32,3 +32,6 @@ cache-keys = [
     { file = "../.git/modules/whisppy/extern/pybind11/HEAD" },
     { file = "../.git/modules/whisppy/extern/whisper.cpp/HEAD" },
 ]
+
+[tool.ruff]
+extend-exclude = ["extern"]
