Replace pyaudio with sounddevice
Reviewers: sjohnson31

Reviewed By: sjohnson31

Pull Request: https://github.com/sjohnson31/hans/pull/13

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,5 @@ SERVER_PORT=8888
 CLIENT_PORT=8888
 
 STT_MODEL_FILE=resources/models/ggml-tiny.en.bin
-
-INPUT_DEVICE_INDEX=1
-OUTPUT_DEVICE_INDEX=1
+INPUT_DEVICE=default
+OUTPUT_DEVICE=default
