--- a/packages/client/pyproject.toml
+++ b/packages/client/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = "==3.11.10"
 dependencies = [
     "librosa>=0.10.2.post1",
     "numpy>=1.19",
-    "pyaudio>=0.2.14",
+    "sounddevice>=0.5.1",
     "transport",
 ]
 
