Rename scripts in pyproject.toml
Created using spr 1.3.5

--- a/packages/server/pyproject.toml
+++ b/packages/server/pyproject.toml
@@ -26,7 +26,7 @@ build-backend = "hatchling.build"
 # These should be globally unique, because all package scripts end up
 # in the same place in the venv
 [project.scripts]
-hans_server = "main:main"
+hans_server = "server:main"
 
 #TODO: This is definitely wrong when building a non-editable wheel
 [tool.hatch.build.targets.wheel]
