Add to grocery list command
Allow adding things to the grocery list in tandoor

Reviewers: sjohnson31

Reviewed By: sjohnson31

Pull Request: https://github.com/sjohnson31/hans/pull/30

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ CLIENT_PORT=8888
 STT_MODEL_FILE=resources/models/ggml-tiny.en.bin
 INPUT_DEVICE=default
 OUTPUT_DEVICE=default
+
+# Only enable if you have a tandoor server available
+#TANDOOR_BASE_URL=localhost
+#TANDOOR_API_KEY=invalid
