Use sounddevice default devices by default

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ SERVER_PORT=8888
 CLIENT_PORT=8888
 
 STT_MODEL_FILE=resources/models/ggml-tiny.en.bin
-INPUT_DEVICE=default
-OUTPUT_DEVICE=default
+#INPUT_DEVICE=default
+#OUTPUT_DEVICE=default
 
 # Only enable if you have a tandoor server available
 #TANDOOR_BASE_URL=localhost
