Add text file version of grocery command

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ STT_MODEL_FILE=resources/models/ggml-tiny.en.bin
 #INPUT_DEVICE=default
 #OUTPUT_DEVICE=default
 
+# Grocery lists can either be a local text file or a
+# tandoor server. Enabling both is not allowed
+GROCERY_LIST_TEXT_FILE = 'groceries.txt'
+
 # Only enable if you have a tandoor server available
 #TANDOOR_BASE_URL=localhost
 #TANDOOR_API_KEY=invalid
