--- a/packages/transport/pyproject.toml
+++ b/packages/transport/pyproject.toml
@@ -9,3 +9,9 @@ dependencies = []
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pyopenssl>=25.0.0",
+    "pytest>=8.3.4",
+]
