--- a/packages/transport/pyproject.toml
+++ b/packages/transport/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11.10"
-dependencies = []
+dependencies = [
+    "numpy>=1.26.4",
+]
 
 [build-system]
 requires = ["hatchling"]
