--- a/packages/audio_debugger/pyproject.toml
+++ b/packages/audio_debugger/pyproject.toml
@@ -9,3 +9,6 @@ dependencies = ["numpy>=1.26.4", "sounddevice>=0.5.1"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/audio_debugger"]
