--- a/packages/transport/pyproject.toml
+++ b/packages/transport/pyproject.toml
@@ -16,4 +16,8 @@ build-backend = "hatchling.build"
 dev = [
     "pyopenssl>=25.0.0",
     "pytest>=8.3.4",
+    "pytest-asyncio>=1.0.0",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/transport"]
