--- a/packages/client/pyproject.toml
+++ b/packages/client/pyproject.toml
@@ -23,8 +23,7 @@ build-backend = "hatchling.build"
 # These should be globally unique, because all package scripts end up
 # in the same place in the venv
 [project.scripts]
-hans_client = "client:main"
+hans_client = "client.client:main"
 
-#TODO: This is definitely wrong when building a non-editable wheel
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["src/client"]
